name:    atom
version: 1.0.13

category: Language, Embedded

synopsis: An EDSL for embedded hard realtime applications.

description:
    Atom is a Haskell EDSL for designing hard realtime embedded software.
    Based on guarded atomic actions (similar to STM), Atom enables
    highly concurrent programming without the need for mutex locking.

    In addition, Atom performs compile-time task scheduling and generates code
    with deterministic execution time and constant memory use, simplifying the
    process of timing verification and memory consumption in hard realtime
    applications.

    Without mutex locking and run-time task scheduling, Atom eliminates
    the need and overhead of RTOSes for many embedded applications.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>, Lee Pike <leepike@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

extra-source-files:
  RELEASE-NOTES

library
    build-depends:
        base       >= 4.0     && < 5,
        mtl        ,
        process    ,
        syb        ,
        containers ,
        bimap

    exposed-modules:
        Language.Atom
        Language.Atom.Analysis
        Language.Atom.Code
        Language.Atom.Common
        Language.Atom.Common.Fader
        Language.Atom.Common.Threshold
        Language.Atom.Common.ValidData
        Language.Atom.Compile
        Language.Atom.Elaboration 
        Language.Atom.Example.External
        Language.Atom.Example.Gcd
        Language.Atom.Example.Probes
        Language.Atom.Expressions
        Language.Atom.Language
        Language.Atom.Scheduling
        Language.Atom.Unit
        Language.Atom.UeMap

    extensions: GADTs, DeriveDataTypeable

    ghc-options: -Wall

source-repository head
    type:     git
    location: git://github.com/tomahawkins/atom.git

